flowers for each nursery

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 <body>
   <main class="container">
-    <section class="flowerGarden">
-
-    </section>
+    <section class="flowerGarden"></section>
+    <section class="retailers"></section>
   </main>
   <script type="module" src="scripts/main.js"></script>
 </body>
